# strongr

./: .gitignore  package-lock.json  update_types.sh
.github/: dependabot.yml
.github/workflows/: validate.yml
api/: Cargo.toml  my_typescript_definitions.ts  package-lock.json  package.json  tsconfig.json
api/http/exercise/: create_exercise.http  create_exercise_for_user.http  get_exercise.http  get_exercise_by_id.http  get_previous_exercises
api/http/users/: auth_user.http  create_user.http  get_user_by_id.http  update_user_by_id.http
api/http/workouts/: create-workout.http  create_workout.http  delete_workout_by_id.http  get-workout_by_id.http  get_user_workouts.http  update_workout_by_id.http
api/src/: index.ts  main.rs  types.ts
api/src/authentication/: handlers.rs  models.rs
api/src/database/: index.ts  mod.rs
api/src/error/: mod.rs
api/src/exercises/: handlers.rs  mod.rs  models.rs  router.rs
api/src/jwt/: logic.rs  models.rs
api/src/routes/: index.ts
api/src/routines/: handlers.rs  models.rs
api/src/users/: handlers.rs  models.rs  router.rs
api/src/workouts/: handlers.rs  models.rs  router.rs
http/: create-exercise.http  create-user.http  get-exercises.http
mobile/: .eslintrc.json  .prettierrc  README.md  app.json  babel.config.js  dummy.ts  index.ts  package-lock.json  package.json  types.ts
mobile/app/: _layout.tsx  index.tsx  tamagui.config.ts
mobile/assets/: exerciseList.ts
mobile/endpoints/: index.ts
nextweb/: package-lock.json  package.json
nextweb/app/: globals.css  layout.tsx
nextweb/components/: Footer.tsx  (+1 more)
(+53 files in other folders)
