[package]
name = "api"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.6.20"
axum-login = "0.7.3"
chrono = "0.4.31"
dotenv = "0.15.0"
futures = "0.3.29"
mongodb = {version = "2.7.1", features = ["bson-chrono-0_4"]}
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
tower-http = {version = "0.4.4", features = ["cors"]}
typeshare = "1.0.1"
