[package]
name = "api"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "=0.6.2"
axum-auth = "0.4.1"
axum-login = "0.16.0"
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
mongodb = { version = "2.7.1", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
typeshare = "1.0.3"
uuid = { version = "1.9.1", features = ["v4"] }
